--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,10 +18,12 @@ services:
 
   playwright:
     build: .
-    container_name: playwright-runner
+    container_name: playwright-tests
+    ports:
+      - "8080:8080"
     depends_on:
       juice-shop:
         condition: service_healthy
     environment:
       - CI=true
-    command: npm run test-all-allure
+    command: npm run docker-test-all-allure
