--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
           "CMD",
           "/nodejs/bin/node",
           "-e",
-          "require('http').get('http://localhost:3000', (res) => { if (res.statusCode >= 200 && res.statusCode < 400) process.exit(0); else process.exit(1); }).on('error', (err) => process.exit(1));",
+          "require('node:http').get('http://localhost:3000', (res) => { if (res.statusCode >= 200 && res.statusCode < 400) process.exit(0); else process.exit(1); }).on('error', (err) => process.exit(1));",
         ]
       interval: 3s
       timeout: 3s
