--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,5 @@
 {
   "name": "Playwright Dev Container",
   "image": "mcr.microsoft.com/playwright:v1.57.0-noble",
-  "postCreateCommand": "npm i && npx playwright install --with-deps && cp .env.example .env"
+  "postCreateCommand": "npm i && cp .env.example .env"
 }
