--- a/.dockerignore
+++ b/.dockerignore
@@ -21,3 +21,9 @@
 **/values.dev.yaml
 LICENSE
 README.md
+
+**/allure
+**/test-results
+**/playwright-report
+**/playwright/.cache/
+**/playwright/.auth/
