run API and then UI tests

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test-all": "npx playwright test",
+    "test-all": "npm run test-api && npm run test-ui",
+    "test-ui": "npx playwright test --project=UI",
+    "test-api": "npx playwright test --project=API",
     "test-viewer": "npx playwright test --ui",
     "test-all-allure": "rm -rf ./allure && (npm run test-all; test_exit=$?; npm run allure-open || true; exit $test_exit)",
     "allure-open": "cd ./allure/ && npx allure generate && npx allure open",
